--- a/pom.xml
+++ b/pom.xml
@@ -114,10 +114,11 @@
             <version>1.2.8</version>
         </dependency>
         <!--消除冗长的java代码工具类-->
-       <!-- <dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>-->
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
