--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,12 +25,10 @@ qiniu:
   accessKey: b_xRrq4YOu3_qxqzjpmck0NSMhtZpcD5ioVzCo6l
   secretKey: oLe2ZD6Bvrusy5fruLosSiXWCRMWg-YG9hHbiJJp
   bucket: wanqhblog
+  path: oy09glbzm.bkt.clouddn.com
 ##jwt配置
 audience:
   clientId: 098f6bcd4621d373cade4e832627b4f6
   base64Secret: MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
   name: restapiuser
   expiresSecond: 172800
-#文件基础路径
-img:
-  location: F:\blog\file
